--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>courses</title>
+   <title>home</title>
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
@@ -24,7 +24,7 @@
       </div>
 
       <div class="container-fluid">
-         <a class="navbar-brand" href="index.html" style="margin-top: 200px; margin-bottom: 200px; font-size: 15px; text-align: left;">FunMath Session</a>
+         <a class="navbar-brand" href="index.html" style="margin-top: 200px; margin-bottom: 200px; font-size: 15px;">FunMath Session</a>
       </div>
 
       <form action="search.html" method="post" class="search-form">
@@ -76,6 +76,88 @@
    </nav>
 
 </div>
+
+<section class="about">
+
+   <div class="row">
+
+      <div class="image">
+         <img src="images/funmath.png" alt="" width="300" height="300" style="margin-left: 70px; class="d-inline-block align-text-top">
+      </div>
+
+      <div class="content">
+         <h3>Welcome, Hana!!</h3>
+         <p align="justify">Selamat datang di Website Funmath Session. Disini kamu akan mendapat berbagai ilmu matematika. Yuk explore Funmath lebih jauh dan dapatkan pembelajaran matematika yang menyenangkan!</p>
+         <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTA3NzgyMzkyNTY0MDk2?story_media_id=2460143704095092790_44551470405&igshid=MDJmNzVkMjY=" class="inline-btn">our account</a>
+      </div>
+
+   </div>
+
+   <div class="box-container">
+
+      <div class="box">
+         <i class="fas fa-graduation-cap"></i>
+         <div>
+            <h3>223</h3>
+            <p>online courses</p>
+         </div>
+      </div>
+
+      <div class="box">
+         <i class="fas fa-user"></i>
+         <div>
+            <h3>+22k</h3>
+            <p>followers</p>
+         </div>
+      </div>
+
+      <div class="box">
+         <i class="fas fa-handshake"></i>
+         <div>
+            <h3>+5</h3>
+            <p>collab partner</p>
+         </div>
+      </div>
+
+   </div>
+
+</section>
+
+<section class="home-grid">
+
+   <h1 class="heading">quick options</h1>
+
+   <div class="box-container">
+
+      <div class="box">
+         <h3 class="title">become a tutor</h3>
+         <p class="tutor">Hubungi kami untuk informasi lebih lanjut</p>
+         <a href="teachers.html" class="inline-btn">get started</a>
+      </div>
+
+      <div class="box">
+         <h3 class="title">top categories</h3>
+         <div class="flex">
+            <a href="#"><i class="fas fa-code"></i><span>aljabar</span></a>
+            <a href="#"><i class="fas fa-chart-simple"></i><span>statistika</span></a>
+            <a href="#"><i class="fas fa-music"></i><span>trigonometri</span></a>
+            <a href="#"><i class="fas fa-pen"></i><span>aritmatika</span></a>
+            <a href="#"><i class="fas fa-chart-line"></i><span>geometri</span></a>
+            <a href="#"><i class="fas fa-camera"></i><span>kalkulus</span></a>
+         </div>
+      </div>
+
+      <div class="box">
+         <h3 class="title">collab with us</h3>
+         <p class="tutor">Hubungi kami untuk informasi lebih lanjut</p>
+         <a href="contact.html" class="inline-btn">contact us</a>
+      </div>
+
+   </div>
+
+</section>
+
+
 
 <section class="courses">
 
@@ -184,6 +266,8 @@
    </div>
 
 </section>
+
+
 
 
 
