--- a/teachers.html
+++ b/teachers.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="container-fluid">
-         <a class="navbar-brand" href="home.html" style="margin-top: 200px; margin-bottom: 200px; font-size: 15px; text-align: left;">FunMath Session</a>
+         <a class="navbar-brand" href="index.html" style="margin-top: 200px; margin-bottom: 200px; font-size: 15px; text-align: left;">FunMath Session</a>
       </div>
 
       <form action="search.html" method="post" class="search-form">
@@ -68,7 +68,7 @@
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="index.html"><i class="fas fa-home"></i><span>home</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
@@ -144,7 +144,7 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/andaru.png" alt="">
+            <img src="images/odie.png" alt="">
             <div>
                <h3>Andaru Hymawan</h3>
                <span>Mr Analis</span>
